# inpaint-benchmark-suite

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
1_inpainting_benchmark/: README.md  main.py  pyproject.toml
1_inpainting_benchmark/data/dataset/: inpainting_prompts.csv
1_inpainting_benchmark/data/results/2025-07-28_18-57-49/: benchmark_log.csv
1_inpainting_benchmark/data/results/2025-07-28_19-14-20/: benchmark_log.csv
1_inpainting_benchmark/scripts/: model_fluxcontrolbeta  model_fluxcontrolbeta.py  model_fluxkontextdev.py  model_kandinsky2.py  model_stablediffusion.py  model_stablediffusionv2.py  model_stablediffusionxl.py  run_benchmark.py
2_comfy_runner/: README.md  comfy2py.py  main.py  pyproject.toml
2_comfy_runner/comfyui/: pyproject.toml
2_comfy_runner/comfyui/script_examples/: basic_api_example.py  prompt.json
