[project]
name = "inpaint-benchmark-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comfy-cli>=1.4.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv.workspace]
members = [
    "2_comfy_runner",
]
