[project]
name = "1-inpainting-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.34.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.0",
]
